// This is the public API offered by your entity.
syntax = "proto3";

import "common_api.proto";
import "common_domain.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

package app.improving.productcontext.product;

enum ApiProductStatus {
    API_PRODUCT_STATUS_ACTIVE = 0;
    API_PRODUCT_STATUS_INACTIVE = 2;
    API_PRODUCT_STATUS_DELETED = 3;
    API_PRODUCT_STATUS_UNKNOWN = 4;
}

message ApiProduct {
    string sku = 1 [(kalix.field).entity_key = true];
    ApiProductInfo info = 2;
    ApiProductMetaInfo meta = 3;
    ApiProductStatus status = 4;
}
message ApiProductInfo {
    string sku = 1 [(kalix.field).entity_key = true];
    string  name = 2;
    string  description = 3;
    string section = 4;
    string row = 5;
    string seat = 6;
    ApiEventId event = 7;
    repeated string image = 8;
    double price = 9;
    double cost = 10;
    ApiStoreId store = 11;
}

message ApiProductInfoUpdate {
    string sku = 1 [(kalix.field).entity_key = true];
    string  name = 2;
    string  description = 3;
    string section = 4;
    string row = 5;
    string seat = 6;
    ApiEventId event = 7;
    repeated string image = 8;
    double price = 9;
    double cost = 10;
    ApiStoreId store = 11;
}

message ApiProductMetaInfo {
    ApiMemberId created_by = 1;
    google.protobuf.Timestamp created_on = 2;
    ApiMemberId last_modified_by = 3;
    google.protobuf.Timestamp last_modified_on = 4;
}

message ApiCreateProduct {
    string sku = 1 [(kalix.field).entity_key = true];
    ApiProductInfo info = 2;
    ApiProductMetaInfo meta = 3;
}
message ApiUpdateProductInfo {
    string sku = 1 [(kalix.field).entity_key = true];
    ApiProductInfo info = 2;
    ApiMemberId updating_member = 3;
}
message ApiDeleteProduct {
    string sku = 1 [(kalix.field).entity_key = true];
    ApiMemberId deleting_member = 2;
}
message ApiActivateProduct {
    string sku = 1 [(kalix.field).entity_key = true];
    ApiMemberId activating_member = 2;
}
message ApiInactivateProduct {
    string sku = 1 [(kalix.field).entity_key = true];
    ApiMemberId inactivating_member = 2;
}
message ApiGetProductInfo {
    string sku = 1 [(kalix.field).entity_key = true];
}
message ApiProductInfoResult {
    string sku = 1 [(kalix.field).entity_key = true];
    ApiProductInfo info = 2;
}

message ApiGetTicketsForEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
}
message ApiTicketsForEvent {
    string event_id = 1 [(kalix.field).entity_key = true];
    repeated ProductId tickets  = 2;
}

// For direct_event_product events.

message ApiProductCreated {
    ApiProductId sku = 1;
    ApiProductInfo info = 2;
    ApiProductMetaInfo meta = 3;
}
message ApiProductInfoUpdated {
    ApiProductId sku = 1;
    ApiProductInfo info = 2;
    ApiProductMetaInfo meta = 3;
}
message ApiProductDeleted {
    ApiProductId sku = 1;
    ApiMemberId deleting_member = 2;
}
message ApiProductActivated {
    ApiProductId sku = 1;
    ApiMemberId activating_member = 2;
}
message ApiProductInactivated {
    ApiProductId sku = 1;
    ApiMemberId inactivating_member = 2;
}
